<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/number_of_faces_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:gravity="center"
        android:text="@string/number_of_faces"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/decrease_face_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/decrease_number_of_faces_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_faces_label"
        android:background="@drawable/ic_decrease"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/number_of_faces_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/source_code_pro_bold"
        android:text="6"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/increase_face_button"
        app:layout_constraintStart_toEndOf="@id/decrease_face_button"
        app:layout_constraintTop_toBottomOf="@id/number_of_faces_label" />


    <ImageButton
        android:id="@+id/increase_face_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/increase_number_of_faces_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_faces_label"
        android:background="@drawable/ic_increase"
        android:layout_marginEnd="20dp" />

    <TextView
        android:id="@+id/number_of_dice_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:gravity="center"
        android:text="@string/number_of_dice"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_faces_edit" />


    <ImageButton
        android:id="@+id/decrease_dice_button"
        android:layout_marginTop="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/decrease_number_of_dice_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_dice_label"
        android:background="@drawable/ic_decrease"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/number_of_dice_edit"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/source_code_pro_bold"
        android:text="1"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@id/increase_dice_button"
        app:layout_constraintStart_toEndOf="@id/decrease_dice_button"
        app:layout_constraintTop_toBottomOf="@id/number_of_dice_label" />


    <ImageButton
        android:id="@+id/increase_dice_button"
        android:layout_marginTop="20dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/increase_number_of_dice_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_of_dice_label"
        android:background="@drawable/ic_increase"
        android:layout_marginEnd="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/red"
        android:elevation="10dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:text="@string/roll"
        android:textSize="22sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increase_dice_button" />

    <ImageView
        android:id="@+id/background_section"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/roll_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/results_section"
        android:src="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </ImageView>

    <TextView
        android:id="@+id/results_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_section"
        tools:text="1+2+5+4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/red"
        android:elevation="10dp"
        android:fontFamily="@font/source_code_pro_medium"
        android:text="@string/clear"
        android:textSize="22sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>